add basic mode for translation

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "commander": "^2.19.0",
     "crawler": "^1.2.0",
     "figlet": "^1.2.1",
-    "koa": "^2.6.1"
+    "inquirer": "^6.2.0",
+    "koa": "^2.6.1",
+    "typo-js": "^1.0.3"
   }
 }
