add todos and regist command

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dictionary-cli",
+  "name": "dict",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -31,9 +31,10 @@
     "chalk": "^2.4.1",
     "commander": "^2.19.0",
     "crawler": "^1.2.0",
-    "figlet": "^1.2.1",
     "inquirer": "^6.2.0",
-    "koa": "^2.6.1",
+    "ora": "^3.0.0",
     "typo-js": "^1.0.3"
-  }
+  },
+  "preferGlobal": true,
+  "bin": "./src/command.js"
 }
