--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "commander": "^2.19.0",
     "crawler": "^1.2.0",
     "inquirer": "^6.2.0",
+    "json-file": "^0.1.0",
     "ora": "^3.0.0",
     "typo-js": "^1.0.3"
   },
