--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,15 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    [
+      "env",
+      {
+        "targets": { "node": "6", "uglify": true }
+      }
+    ]
+  ],
   "plugins": [
-      "espower",
-      "@babel/plugin-transform-runtime"
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    "transform-runtime"
   ]
 }
