--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "dict-cli-simple",
+  "name": "lexicon-cli",
   "version": "1.0.2",
   "description": "One simple dictionary CLI",
   "main": "./build/index.js",
-  "homepage": "https://github.com/RogerZZZZZ/dictionary-cli-simple",
+  "homepage": "https://github.com/RogerZZZZZ/lexicon-cli",
   "scripts": {
-    "build": "webpack --config script/prod.config.js --progress --profile --colors --mode production",
+    "build": "npm run clean && webpack --config script/base.config.js -p",
+    "clean": "rimraf lib packed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "RogerZZZZZ (https://github.com/RogerZZZZZ)",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.3.15",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-espower": "^3.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-register": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.2.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-runtime": "^6.3.19",
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^1.16.0",
     "shebang-loader": "0.0.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.1.4",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
@@ -39,6 +39,7 @@
     "inquirer": "^6.2.0",
     "json-file": "^0.1.0",
     "ora": "^3.0.0",
+    "rimraf": "^2.6.2",
     "typo-js": "^1.0.3"
   },
   "files": [
@@ -55,6 +56,11 @@
     "dict",
     "cli"
   ],
-  "preferGlobal": true,
-  "bin": "./build/index.js"
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "bin": {
+    "dict": "./build/index.js",
+    "lexi": "./build/index.js"
+  }
 }
