--- a/package.json
+++ b/package.json
@@ -2,30 +2,32 @@
   "name": "lexicon-cli",
   "version": "1.0.0",
   "description": "One simple dictionary CLI",
-  "main": "./build/index.js",
+  "main": "build/index.js",
   "homepage": "https://github.com/RogerZZZZZ/lexicon-cli",
   "scripts": {
     "build": "npm run clean && webpack --config script/base.config.js -p",
+    "prepublish": "npm run build && echo '#!/usr/bin/env node' | cat - build/index.js > temp && mv temp build/index.js",
     "clean": "rimraf lib packed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "RogerZZZZZ (https://github.com/RogerZZZZZ)",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.3.15",
     "babel-cli": "^6.26.0",
-    "babel-register": "^6.26.0",
+    "babel-core": "^6.3.15",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-register": "^6.26.0",
     "copy-webpack-plugin": "^4.6.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-import": "^1.16.0",
+    "shebang-loader": "0.0.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
